5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4012/executions/1635_1053.log
== TEST (2019-04-03 18:43:34) 
-- CODE:
nome = str(input("nome: "))

if nome = cervo :
	mensagem = cervo eh patrono do Harry Potter
else:
	mensagem = nao eh patrono do Harry Potter
	
print(mensagem)

-- ERROR:
File "XXXX", line 3
    if nome = cervo :
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 18:43:48) 
-- CODE:
nome = str(input("nome: "))

if (nome = cervo):
	mensagem = cervo eh patrono do Harry Potter
else:
	mensagem = nao eh patrono do Harry Potter
	
print(mensagem)

-- ERROR:
File "XXXX", line 3
    if (nome = cervo):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 18:43:59) 
-- CODE:
nome = str(input("nome: "))

if (nome == cervo):
	mensagem = cervo eh patrono do Harry Potter
else:
	mensagem = nao eh patrono do Harry Potter
	
print(mensagem)

-- ERROR:
File "XXXX", line 4
    mensagem = cervo eh patrono do Harry Potter
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 18:47:26) 
-- CODE:
nome = str(input("nome: "))

if (nome == cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print("nao eh patrono do Harry Potter")
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (nome == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 18:47:38) 
-- CODE:
nome = str(input("nome: "))

if (nome == cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print("nao eh patrono do Harry Potter")
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (nome == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 18:49:15) 
-- CODE:
nome = str(input("nome: "))

if (nome == patrono):
	print(nome + "eh patrono do Harry Potter")
else:
	print(nome + "nao eh patrono do Harry Potter")
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (nome == patrono):
NameError: name 'patrono' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 18:50:34) 
-- CODE:
nome = str(input("nome: "))

if (patrono == cervo):
	print(nome + "eh patrono do Harry Potter")
else:
	print(nome + "nao eh patrono do Harry Potter")
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (patrono == cervo):
NameError: name 'patrono' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 18:50:58) 
-- CODE:
nome = str(input("nome: "))

if (nome == cervo):
	print(nome + "eh patrono do Harry Potter")
else:
	print(nome + "nao eh patrono do Harry Potter")
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (nome == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 18:52:56) 
-- CODE:
nome_patrono = str(input("nome: "))

if (nome_patrono == cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print(nome + "nao eh patrono do Harry Potter")
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (nome_patrono == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 18:53:11) 
-- CODE:
nome_patrono = str(input("nome: "))

if (nome_patrono == cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print(nome + "nao eh patrono do Harry Potter")
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (nome_patrono == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 12:36:42) 
-- CODE:
nome_patrono = str(input("nome: "))

if (nome_patrono == cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print(nome_patrono + "nao eh patrono do Harry Potter")
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (nome_patrono == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 12:50:33) 
-- CODE:
nome_patrono = str(input("nome: "))

if (nome_patrono == cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print(nome_patrono + "nao eh patrono do Harry Potter")
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (nome_patrono == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 12:51:39) 
-- CODE:
nome_patrono = str(input("nome: "))

if (nome_patrono == cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print(nome_patrono + "nao eh patrono do Harry Potter")
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (nome_patrono == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:21:59) 
-- CODE:
nome_patrono = str(input("nome: "))

if (nome_patrono == cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print(nome_patrono + "nao eh patrono do Harry Potter")
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (nome_patrono == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:23:25) 
-- CODE:
nome_patrono = input("nome: ")

if (nome_patrono == "cervo"):
	print("cervo eh patrono do Harry Potter")
else:
	print(nome_patrono + "nao eh patrono do Harry Potter")
	


-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:23:53) 
-- CODE:
nome_patrono = input("nome: ")

if (nome_patrono == "cervo"):
	print("cervo eh patrono do Harry Potter")
else:
	print(nome_patrono  "nao eh patrono do Harry Potter")
	


-- ERROR:
File "XXXX", line 6
    print(nome_patrono  "nao eh patrono do Harry Potter")
                                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:23:59) 
-- CODE:
nome_patrono = input("nome: ")

if (nome_patrono == "cervo"):
	print("cervo eh patrono do Harry Potter")
else:
	print(nome_patrono + "nao eh patrono do Harry Potter")
	


-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:24:30) 
-- CODE:
nome_patrono = input("nome: ")

if (nome_patrono == "cervo"):
	print("cervo eh patrono do Harry Potter")
else:
	print(nome_patrono +        "nao eh patrono do Harry Potter")
	


-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:24:45) 
-- CODE:
nome_patrono = input("nome: ")

if (nome_patrono == "cervo"):
	print("cervo eh patrono do Harry Potter")
else:
	print(nome_patrono + "nao eh patrono do Harry Potter")
	


-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:24:52) 
-- CODE:
nome_patrono = input("nome: ")

if (nome_patrono == "cervo"):
	print("cervo eh patrono do Harry Potter")
else:
	print(nome_patrono + "nao eh patrono do Harry Potter")
	


-- EXECUTION TIME:
0.151682
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:25:02) 
-- CODE:
nome_patrono = input("nome: ")

if (nome_patrono == "cervo"):
	print("cervo eh patrono do Harry Potter")
else:
	print(nome_patrono + "nao eh patrono do Harry Potter")
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:28:34) 
-- CODE:
nome_patrono = input("nome: ")

if (nome_patrono == "cervo"):
	print("cervo eh patrono do Harry Potter")
else:
	print(nome_patrono + "nao eh patrono do Harry Potter")
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:29:05) 
-- CODE:
nome_patrono = input("nome: ")

if (nome_patrono == "cervo"):
	print("cervo eh patrono do Harry Potter")
else:
	print(nome_patrono + " nao eh patrono do Harry Potter")
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:29:18) 
-- CODE:
nome_patrono = input("nome: ")

if (nome_patrono == "cervo"):
	print("cervo eh patrono do Harry Potter")
else:
	print(nome_patrono + " nao eh patrono do Harry Potter")
-- EXECUTION TIME:
0.141262
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
